--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   },
   "homepage": "https://github.com/roosteronacid/bloodtype.coffee#readme",
   "devDependencies": {
+    "del": "^1.2.1",
     "gulp": "^3.9.0",
+    "gulp-inline-source": "^2.1.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
     "gulp-sass": "^2.0.4",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.2.0",
+    "run-sequence": "^1.1.2"
   }
 }
