--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-minify-html": "^1.0.4",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.2.0",
+    "node-regexp": "^0.1.1",
     "run-sequence": "^1.1.2"
   }
 }
