--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.2.0",
     "node-regexp": "^0.1.1",
-    "run-sequence": "^1.1.2"
+    "run-sequence": "^1.1.2",
+    "through2": "^2.0.0"
   }
 }
